Update cart page

--- a/src/styles.css
+++ b/src/styles.css
@@ -82,6 +82,12 @@
     animation: Gradient 15s ease infinite;
 }
 
+.carousel-slide-img {
+    width : 40wh;
+    height: 30vh;
+    background-size: 400% 400%; 
+}
+
 .img-fluid{
     width: 30wh;
     height: 30vh;
@@ -124,3 +130,21 @@
         background-position: 0% 50%;
     }
 }
+
+
+/** Extra small devices (portrait phones, less than 576px)
+* No media query since this is the default in Bootstrap
+
+* Small devices (landscape phones, 576px and up)
+*/
+@media (min-width: 576px) { }
+
+/*Medium devices (tablets, 768px and up)*/
+@media (min-width: 768px) { }
+
+/* Large devices (desktops, 992px and up)*/
+@media (min-width: 992px) { }
+
+/* Extra large devices (large desktops, 1200px and up)*/
+@media (min-width: 1200px) { }
+
